[workspace]
members = [
    ".",
    "crates/csv-converter",
    "crates/data-science"
]

[package]
name = "cargo_tutorial"
version = "0.1.0"
edition = "2021"
default-run = "cargo_tutorial"

[dependencies]
csv-converter = { path = "./crates/csv-converter" }
data-science = { path = "./crates/data-science" }
csv.workspace = true
anyhow.workspace = true
chrono.workspace = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }