[workspace]
members = [
    ".",
    "crates/csv-converter",
    "crates/data-science",
    "crates/opencv-tutorial",
    "crates/polars-tutorial",
    "crates/ort-tutorial"
]

[package]
name = "cargo_tutorial"
version = "0.1.0"
edition = "2021"
default-run = "cargo_tutorial"

[dependencies]
csv-converter = { path = "./crates/csv-converter" }
data-science = { path = "./crates/data-science" }
csv.workspace = true
anyhow.workspace = true
chrono.workspace = true

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
opencv = { version = "0.94.4", features = ["highgui", "videoio", "imgproc"] }
image = "0.24"
ort = { version = "1.16.3", features = ["download-binaries"] }
ndarray = "0.15"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
